bk_ida/gccida/c1/canon_true_dependence
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_true_dependence/src/alias.c:2567:38: error: must use 'enum' tag to refer to type 'machine_mode'
int  canon_true_dependence( rtx mem, machine_mode mem_mode, rtx mem_addr, rtx x, int ( *varies)( rtx, int)) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_true_dependence/src/alias.c:2586:47: error: use of undeclared identifier 'machine_mode'
if ( base_alias_check( mem2_addr, mem_addr, ( machine_mode)*( ( unsigned __int8 *)x + 2), mem_mode) ) 
                                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_true_dependence/src/obj/alias.o] Error 1
